[package]
name = "nelisp-emacs-gtk"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "GTK4 GUI display backend for nelisp-emacs (Layer 3, Doc 51 Phase 11.C target)"

[[bin]]
name = "nemacs-gtk"
path = "src/main.rs"

[dependencies]
# `v4_10' enables `gtk::FileDialog' (= introduced in GTK 4.10).
# Debian 13 / Ubuntu 24.04+ ship GTK >= 4.12, so this is safe.
gtk = { package = "gtk4", version = "0.9", features = ["v4_10"] }
pangocairo = "0.20"
nelisp = { package = "nelisp-build-tool", path = "../nelisp/build-tool" }

[profile.release]
opt-level = 3
lto = "thin"
